--- a/EKAPPAERP/Views/BasketBall/ItemsDetailsByID.cshtml
+++ b/EKAPPAERP/Views/BasketBall/ItemsDetailsByID.cshtml
@@ -100,7 +100,7 @@
                                                             <span class="inputcount">1/150</span>
                                                         </div>
                                                         <div class="form-group my-3">
-                                                            <input type="text" placeholder="Player Number" class="form-control" name="">
+                                                            <input type="text" placeholder="Player Number" id="PlayerNumber" Number" class="form-control" name="">
                                                             <span class="inputcount">1/150</span>
                                                         </div>
                                                         <div class="form-group">
